# simple-tcp-char-server

./: .gitignore  CMakeLists.txt  README.md
Source/: Client.cpp  Server.cpp  signalHandler.h
configs/: debug.json
header/: Client.h  ClientCfg.h  Server.h  init_log.h  signalHandler.h
header/Server/: Server.h
header/Utils/: InitializationLog.h  signalHandler.h
headers/: Client.h  init_log.h
source/: Client.cpp  Server.cpp  main.cpp  settings.cpp
source/Server/: Server.cpp
source/Server/Client/: Client.cpp
source/Utils/: InitializationLog.cpp
src/: CMakeLists.txt  Client.cpp  Client.h  Server.h  main.cpp  settings.cpp  settings.h
tests/: CMakeLists.txt  Client_test.h  init_log.h  main.cpp  settings.h
